--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- jay sanghans -->
 	<meta charset="utf-8">
 	<title>Core Electronics</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -22,7 +23,7 @@
             <div class="offcanvas-body">
                 <div class="canvas-list">
                     <a href="Files/Accessories/accessories.html">&#10095; Accessories</a><br/>
-                    <a href="Files/Television/television.html">&#10095; Television</a><br/>
+                    <a href="Files/Television/Television.html">&#10095; Television</a><br/>
                     <a href="Files/Mobile Phones/Phones.html">&#10095; Mobile Phones</a><br/>
                     <a href="Files/Computer/Computer.html">&#10095; Computers</a><br/>
                     <a href="Files/Tablets/tablets.html">&#10095; Tablets</a><br/>
