--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="Files/Tablets/tablets.html">&#10095; Tablets</a><br/>
                     <a href="Files/Home appliances/home.html">&#10095; Home appliances</a><br/>
                     <a href="Files/Kitchen appliances/Kitchen.html">&#10095; Kitchen appliances</a><br/>
-                    <a href="Files/Audio & video/Audio_video.html">&#10095; Audio & video</a><br/>
+                    <a href="Files/Audio & Video/Audio_video.html">&#10095; Audio & video</a><br/>
                     <a href="Files/Health & Fitness/Health.html">&#10095; Health & fitness</a><br/>
                     <a href="Files/Grooming/Grooming.html">&#10095; Grooming & personal care</a><br/>
                     <a href="Files/Cameras/Cameras.html">&#10095; Cameras & Accessories</a><br/>
